# oveo

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  .rustfmt.toml  Cargo.toml  Makefile  README.md  justfile  napi.just  package.json  tsconfig.composite.json  tsconfig.json
.github/: renovate.json
.github/workflows/: ci.yml  napi-libraries.yml  napi-release.yml  release.yml
crates/oveo/: Cargo.toml  README.md
crates/oveo/src/: annotation.rs  externs.rs  globals.rs  lib.rs  statements.rs
crates/oveo/src/chunk/: mod.rs
crates/oveo/src/chunk/dedupe/: hash.rs  mod.rs
crates/oveo/src/module/: externs.rs  hoist.rs  json.rs  mod.rs
crates/oveo/src/property_names/: base54.rs  mod.rs
examples/rollup/: app.js  externs.json  properties.ini  rollup.config.mjs
examples/rollup/src/: main.js  test-extern.js
examples/vite/: externs.json  index.html  vite.config.mts
scripts/: increment-versions.sh  napi-increment-versions.sh  publish-package.sh  set-package-version.sh
tests/: package.json  tsconfig.json
tests/optimizer/: normalize.ts
tests/optimizer/chunk/dedupe/: dedupe.test.ts
tests/optimizer/chunk/dedupe/data/04-hoist-root/: input.js  output.js
tests/optimizer/chunk/dedupe/data/05-hoist-nested/: input.js  output.js
tests/optimizer/chunk/dedupe/data/06-hoist-failed/: input.js  output.js
tests/optimizer/chunk/globals/: globals.test.ts
tests/optimizer/chunk/globals/data/01-basic/: input.js  output.js
tests/optimizer/chunk/globals/data/02-basic/: input.js  output.js
tests/optimizer/chunk/globals/data/03-prototype/: input.js  output.js
tests/optimizer/chunk/globals/data/04-globalThis/: input.js  output.js
tests/optimizer/chunk/globals/data/05-window/: input.js  output.js
tests/optimizer/chunk/rename_properties/: rename_properties.test.ts
tests/optimizer/chunk/rename_properties/data/01-basic/: output.js  props-export.ini
tests/optimizer/chunk/rename_properties/data/02-import/: input.js  output.js  props-export.ini  props-import.ini
tests/optimizer/chunk/rename_properties/data/03-sort/: input.js  output.js  props-export.ini  props-import.ini
tests/optimizer/chunk/rename_properties/data/04-key-string/: input.js  output.js
tests/optimizer/chunk/singletons/: singletons.test.ts
tests/optimizer/chunk/url/: url.test.ts
tests/optimizer/module/hoist/: hoist.test.ts
tests/optimizer/module/inline_extern_consts/: inline.test.ts
tests/optimizer/module/intrinsics/: intrinsics.test.ts
(+114 files in other folders)
