[package]
name = "oveo"
version = "0.2.0"
edition = "2024"
authors = ["Boris Kaul <localvoid@gmail.com>"]
license = "MIT"
homepage = "https://github.com/localvoid/oveo"
repository = "https://github.com/localvoid/oveo"
description = "Javascript optimizer"

[dependencies]
thiserror.workspace = true
rustc-hash.workspace = true
regex.workspace = true
sha1.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_codegen.workspace = true
oxc_data_structures.workspace = true
oxc_diagnostics.workspace = true
oxc_ecmascript.workspace = true
oxc_index.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true
oxc_traverse.workspace = true
